# fastweb-assignment

./: .gitignore  Fastweb-Data-Science-Assignment.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
models/: resampled_logit.joblib  weighted_logit.joblib  xgb_resampled_onehot.joblib  xgb_resampled_partitioning.joblib  xgb_resampled_weighted_onehot.joblib  xgb_resampled_weighted_partitioning.joblib  xgb_weighted_onehot.joblib  xgb_weighted_partitioning.joblib
